tests/test_results/flashback_test_output.txt
    Blocking waiting for file lock on build directory
   Compiling rusty-db v0.1.0 (/home/user/rusty-db)
error: the `#[test]` attribute may only be used on a non-associated function
   --> src/transaction/types.rs:531:5
    |
531 |     #[test]
    |     ^^^^^^^ the `#[test]` macro causes a function to be run as a test and has no effect on non-functions
532 | use crate::transaction::types::{IsolationLevel, TransactionState};
    | ------------------------------------------------------------------ expected a non-associated function, found a `use` import
    |
help: replace with conditional compilation to make the item only exist when tests are being run
    |
531 -     #[test]
531 +     #[cfg(test)]
    |

error[E0252]: the name `TransactionState` is defined multiple times
   --> src/transaction/types.rs:532:49
    |
502 |     use crate::network::distributed::TransactionState;
    |         --------------------------------------------- previous import of the type `TransactionState` here
...
532 | use crate::transaction::types::{IsolationLevel, TransactionState};
    |                                                 ^^^^^^^^^^^^^^^^ `TransactionState` reimported here
    |
    = note: `TransactionState` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
    |
532 | use crate::transaction::types::{IsolationLevel, TransactionState as OtherTransactionState};
    |                                                                  ++++++++++++++++++++++++

error[E0252]: the name `IsolationLevel` is defined multiple times
   --> src/transaction/types.rs:532:33
    |
501 |     use crate::IsolationLevel;
    |         --------------------- previous import of the type `IsolationLevel` here
...
532 | use crate::transaction::types::{IsolationLevel, TransactionState};
    |                                 ^^^^^^^^^^^^^^ `IsolationLevel` reimported here
    |
    = note: `IsolationLevel` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
    |
532 | use crate::transaction::types::{IsolationLevel as OtherIsolationLevel, TransactionState};
    |                                                ++++++++++++++++++++++

error[E0252]: the name `Transaction` is defined multiple times
   --> src/transaction/types.rs:533:13
    |
503 |     use crate::transaction::{Transaction, Version};
    |                              ----------- previous import of the type `Transaction` here
...
533 |         use crate::transaction::Transaction;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Transaction` reimported here
    |
    = note: `Transaction` must be defined only once in the type namespace of this module

error[E0432]: unresolved import `crate::network::connection_management`
  --> src/network/advanced_protocol/errors.rs:89:29
   |
89 |         use crate::network::connection_management::ConnectionState;
   |                             ^^^^^^^^^^^^^^^^^^^^^ could not find `connection_management` in `network`

error[E0432]: unresolved import `crate::catalog::ColumnType`
   --> src/analytics/view_management.rs:192:42
    |
192 |     use crate::catalog::{Schema, Column, ColumnType};
    |                                          ^^^^^^^^^^ no `ColumnType` in `catalog`
    |
    = help: consider importing one of these items instead:
            crate::api::ColumnType
            crate::storage::ColumnType
note: enum `crate::procedures::builtins::ColumnType` exists but is inaccessible
   --> src/procedures/builtins.rs:194:1
    |
194 | enum ColumnType {
    | ^^^^^^^^^^^^^^^ not accessible

error[E0433]: failed to resolve: use of undeclared type `ConnectionState`
   --> src/networking/transport/pool.rs:361:24
    |
361 |         conn.set_state(ConnectionState::Active).await.unwrap();
    |                        ^^^^^^^^^^^^^^^ use of undeclared type `ConnectionState`
    |
note: enum `crate::rac::interconnect::ConnectionState` exists but is inaccessible
   --> src/rac/interconnect.rs:360:1
    |
360 | enum ConnectionState {
    | ^^^^^^^^^^^^^^^^^^^^ not accessible
help: a struct with a similar name exists
    |
361 -         conn.set_state(ConnectionState::Active).await.unwrap();
361 +         conn.set_state(Connection::Active).await.unwrap();
    |
help: consider importing one of these enums
    |
315 +     use crate::network::ConnectionState;
    |
315 +     use crate::networking::ConnectionState;
    |
315 +     use crate::networking::pool::ConnectionState;
    |
315 +     use crate::pool::connection_pool::core::ConnectionState;
    |

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> src/networking/discovery/static_list.rs:319:30
    |
319 |             reload_interval: Duration::from_secs(60),
    |                              ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these items
    |
311 +     use crate::networking::discovery::Duration;
    |
311 +     use std::time::Duration;
    |
311 +     use chrono::Duration;
    |
311 +     use tokio::time::Duration;
    |

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> src/networking/discovery/static_list.rs:352:30
    |
352 |             reload_interval: Duration::from_secs(60),
    |                              ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these items
    |
311 +     use crate::networking::discovery::Duration;
    |
311 +     use std::time::Duration;
    |
311 +     use chrono::Duration;
    |
311 +     use tokio::time::Duration;
    |

error[E0433]: failed to resolve: use of undeclared type `HashMap`
   --> src/networking/discovery/cloud/mod.rs:411:26
    |
411 |             tag_filters: HashMap::new(),
    |                          ^^^^^^^ use of undeclared type `HashMap`
    |
help: consider importing one of these structs
    |
404 +     use crate::networking::discovery::HashMap;
    |
404 +     use std::collections::HashMap;
    |

error[E0433]: failed to resolve: use of undeclared type `HashMap`
   --> src/networking/discovery/cloud/mod.rs:426:26
    |
426 |             tag_filters: HashMap::new(),
    |                          ^^^^^^^ use of undeclared type `HashMap`
    |
help: consider importing one of these structs
    |
404 +     use crate::networking::discovery::HashMap;
    |
404 +     use std::collections::HashMap;
    |

error[E0412]: cannot find type `MembershipEvent` in this scope
   --> src/networking/manager.rs:628:64
    |
628 |         async fn watch_changes(&self) -> Result<mpsc::Receiver<MembershipEvent>> {
    |                                                                ^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing one of these enums
    |
570 +     use crate::network::MembershipEvent;
    |
570 +     use crate::networking::MembershipEvent;
    |

error[E0412]: cannot find type `MembershipEvent` in this scope
   --> src/networking/manager.rs:724:79
    |
724 |         async fn subscribe_membership_changes(&self) -> Result<mpsc::Receiver<MembershipEvent>> {
    |                                                                               ^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing one of these enums
    |
570 +     use crate::network::MembershipEvent;
    |
570 +     use crate::networking::MembershipEvent;
    |

error[E0433]: failed to resolve: use of undeclared type `NodeInfo`
   --> src/networking/api.rs:515:26
    |
515 |         let local_node = NodeInfo::new(
    |                          ^^^^^^^^ use of undeclared type `NodeInfo`
    |
note: struct `crate::networking::discovery::etcd::NodeInfo` exists but is inaccessible
   --> src/networking/discovery/etcd.rs:516:1
    |
516 | struct NodeInfo {
    | ^^^^^^^^^^^^^^^ not accessible
help: consider importing one of these structs
    |
507 +     use crate::clustering::NodeInfo;
    |
507 +     use crate::network::NodeInfo;
    |
507 +     use crate::networking::NodeInfo;
    |
507 +     use crate::networking::autodiscovery::NodeInfo;
    |

error[E0433]: failed to resolve: use of undeclared type `NodeInfo`
   --> src/networking/graphql.rs:538:26
    |
538 |         let local_node = NodeInfo::new(
    |                          ^^^^^^^^ use of undeclared type `NodeInfo`
    |
note: struct `crate::networking::discovery::etcd::NodeInfo` exists but is inaccessible
   --> src/networking/discovery/etcd.rs:516:1
    |
516 | struct NodeInfo {
    | ^^^^^^^^^^^^^^^ not accessible
help: consider importing one of these structs
    |
530 +     use crate::clustering::NodeInfo;
    |
530 +     use crate::network::NodeInfo;
    |
530 +     use crate::networking::NodeInfo;
    |
530 +     use crate::networking::autodiscovery::NodeInfo;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `mem`
   --> src/security/secure_gc.rs:953:9
    |
953 |         mem::forget(data);
    |         ^^^ use of unresolved module or unlinked crate `mem`
    |
    = help: if you wanted to use a crate named `mem`, use `cargo add mem` to add it to your `Cargo.toml`
    = note: module `crate::concurrent::work_stealing::tests::mem` exists but is inaccessible
help: consider importing this module
    |
877 +     use std::mem;
    |

error[E0433]: failed to resolve: use of undeclared type `HashSet`
   --> src/security/mod.rs:544:38
    |
544 |             authorized_compartments: HashSet::from(["SECRET".to_string()]),
    |                                      ^^^^^^^ use of undeclared type `HashSet`
    |
    = note: struct `crate::pool::session::state::tests::HashSet` exists but is inaccessible
help: consider importing this struct
    |
440 +     use std::collections::HashSet;
    |

error[E0433]: failed to resolve: use of undeclared type `HashSet`
   --> src/security/mod.rs:545:32
    |
545 |             authorized_groups: HashSet::new(),
    |                                ^^^^^^^ use of undeclared type `HashSet`
    |
    = note: struct `crate::pool::session::state::tests::HashSet` exists but is inaccessible
help: consider importing this struct
    |
440 +     use std::collections::HashSet;
    |

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> src/backup/backup_encryption.rs:630:46
    |
630 |         key.created_at = SystemTime::now() - Duration::from_secs(86400);
    |                                              ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these items
    |
598 +     use crate::memory::allocator::common::Duration;
    |
598 +     use std::time::Duration;
    |
598 +     use chrono::Duration;
    |
598 +     use tokio::time::Duration;
    |

error[E0425]: cannot find function `current_timestamp` in this scope
    --> src/flashback/transaction.rs:592:24
     |
 592 |             timestamp: current_timestamp(),
     |                        ^^^^^^^^^^^^^^^^^ not found in this scope
     |
note: these functions exist but are inaccessible
    --> src/networking/protocol/handshake.rs:367:1
     |
 367 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::networking::protocol::handshake::current_timestamp`: not accessible
     |
    ::: src/inmemory/population.rs:559:1
     |
 559 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::population::current_timestamp`: not accessible
     |
    ::: src/inmemory/column_store.rs:724:1
     |
 724 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::column_store::current_timestamp`: not accessible
     |
    ::: src/security/audit.rs:756:1
     |
 756 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::audit::current_timestamp`: not accessible
     |
    ::: src/security/authentication.rs:877:1
     |
 877 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::authentication::current_timestamp`: not accessible
     |
    ::: src/security/encryption.rs:712:1
     |
 712 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption::current_timestamp`: not accessible
     |
    ::: src/security/encryption_engine.rs:1093:1
     |
1093 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption_engine::current_timestamp`: not accessible
     |
    ::: src/security/insider_threat.rs:1356:1
     |
1356 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::insider_threat::current_timestamp`: not accessible
     |
    ::: src/security/labels.rs:618:1
     |
 618 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::labels::current_timestamp`: not accessible
     |
    ::: src/security/privileges.rs:797:1
     |
 797 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::privileges::current_timestamp`: not accessible
     |
    ::: src/security/rbac.rs:764:1
     |
 764 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::rbac::current_timestamp`: not accessible
help: consider importing one of these functions
     |
 579 +     use crate::flashback::current_timestamp;
     |
 579 +     use crate::security::security_core::common::current_timestamp;
     |

error[E0425]: cannot find function `current_timestamp` in this scope
    --> src/flashback/transaction.rs:613:24
     |
 613 |             timestamp: current_timestamp(),
     |                        ^^^^^^^^^^^^^^^^^ not found in this scope
     |
note: these functions exist but are inaccessible
    --> src/networking/protocol/handshake.rs:367:1
     |
 367 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::networking::protocol::handshake::current_timestamp`: not accessible
     |
    ::: src/inmemory/population.rs:559:1
     |
 559 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::population::current_timestamp`: not accessible
     |
    ::: src/inmemory/column_store.rs:724:1
     |
 724 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::column_store::current_timestamp`: not accessible
     |
    ::: src/security/audit.rs:756:1
     |
 756 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::audit::current_timestamp`: not accessible
     |
    ::: src/security/authentication.rs:877:1
     |
 877 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::authentication::current_timestamp`: not accessible
     |
    ::: src/security/encryption.rs:712:1
     |
 712 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption::current_timestamp`: not accessible
     |
    ::: src/security/encryption_engine.rs:1093:1
     |
1093 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption_engine::current_timestamp`: not accessible
     |
    ::: src/security/insider_threat.rs:1356:1
     |
1356 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::insider_threat::current_timestamp`: not accessible
     |
    ::: src/security/labels.rs:618:1
     |
 618 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::labels::current_timestamp`: not accessible
     |
    ::: src/security/privileges.rs:797:1
     |
 797 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::privileges::current_timestamp`: not accessible
     |
    ::: src/security/rbac.rs:764:1
     |
 764 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::rbac::current_timestamp`: not accessible
help: consider importing one of these functions
     |
 579 +     use crate::flashback::current_timestamp;
     |
 579 +     use crate::security::security_core::common::current_timestamp;
     |

error[E0425]: cannot find function `current_timestamp` in this scope
    --> src/flashback/transaction.rs:623:24
     |
 623 |             timestamp: current_timestamp(),
     |                        ^^^^^^^^^^^^^^^^^ not found in this scope
     |
note: these functions exist but are inaccessible
    --> src/networking/protocol/handshake.rs:367:1
     |
 367 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::networking::protocol::handshake::current_timestamp`: not accessible
     |
    ::: src/inmemory/population.rs:559:1
     |
 559 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::population::current_timestamp`: not accessible
     |
    ::: src/inmemory/column_store.rs:724:1
     |
 724 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::column_store::current_timestamp`: not accessible
     |
    ::: src/security/audit.rs:756:1
     |
 756 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::audit::current_timestamp`: not accessible
     |
    ::: src/security/authentication.rs:877:1
     |
 877 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::authentication::current_timestamp`: not accessible
     |
    ::: src/security/encryption.rs:712:1
     |
 712 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption::current_timestamp`: not accessible
     |
    ::: src/security/encryption_engine.rs:1093:1
     |
1093 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption_engine::current_timestamp`: not accessible
     |
    ::: src/security/insider_threat.rs:1356:1
     |
1356 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::insider_threat::current_timestamp`: not accessible
     |
    ::: src/security/labels.rs:618:1
     |
 618 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::labels::current_timestamp`: not accessible
     |
    ::: src/security/privileges.rs:797:1
     |
 797 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::privileges::current_timestamp`: not accessible
     |
    ::: src/security/rbac.rs:764:1
     |
 764 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::rbac::current_timestamp`: not accessible
help: consider importing one of these functions
     |
 579 +     use crate::flashback::current_timestamp;
     |
 579 +     use crate::security::security_core::common::current_timestamp;
     |

error[E0425]: cannot find function `current_timestamp` in this scope
    --> src/flashback/transaction.rs:645:24
     |
 645 |             timestamp: current_timestamp(),
     |                        ^^^^^^^^^^^^^^^^^ not found in this scope
     |
note: these functions exist but are inaccessible
    --> src/networking/protocol/handshake.rs:367:1
     |
 367 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::networking::protocol::handshake::current_timestamp`: not accessible
     |
    ::: src/inmemory/population.rs:559:1
     |
 559 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::population::current_timestamp`: not accessible
     |
    ::: src/inmemory/column_store.rs:724:1
     |
 724 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::inmemory::column_store::current_timestamp`: not accessible
     |
    ::: src/security/audit.rs:756:1
     |
 756 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::audit::current_timestamp`: not accessible
     |
    ::: src/security/authentication.rs:877:1
     |
 877 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::authentication::current_timestamp`: not accessible
     |
    ::: src/security/encryption.rs:712:1
     |
 712 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption::current_timestamp`: not accessible
     |
    ::: src/security/encryption_engine.rs:1093:1
     |
1093 | fn current_timestamp() -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::encryption_engine::current_timestamp`: not accessible
     |
    ::: src/security/insider_threat.rs:1356:1
     |
1356 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::insider_threat::current_timestamp`: not accessible
     |
    ::: src/security/labels.rs:618:1
     |
 618 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::labels::current_timestamp`: not accessible
     |
    ::: src/security/privileges.rs:797:1
     |
 797 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::privileges::current_timestamp`: not accessible
     |
    ::: src/security/rbac.rs:764:1
     |
 764 | fn current_timestamp() -> i64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `crate::security::rbac::current_timestamp`: not accessible
help: consider importing one of these functions
     |
 579 +     use crate::flashback::current_timestamp;
     |
 579 +     use crate::security::security_core::common::current_timestamp;
     |

error[E0433]: failed to resolve: use of undeclared type `ViewManager`
   --> src/analytics/mod_new.rs:215:23
    |
215 |         let manager = ViewManager::new();
    |                       ^^^^^^^^^^^ use of undeclared type `ViewManager`
    |
help: consider importing this struct
    |
211 +     use crate::analytics::view_management::ViewManager;
    |

error[E0433]: failed to resolve: use of undeclared type `QueryCache`
   --> src/analytics/mod_new.rs:222:21
    |
222 |         let cache = QueryCache::new(100);
    |                     ^^^^^^^^^^ use of undeclared type `QueryCache`
    |
help: consider importing one of these structs
    |
211 +     use crate::analytics::QueryCache;
    |
211 +     use crate::analytics::query_cache_impl::QueryCache;
    |
211 +     use crate::api::QueryCache;
    |

error[E0425]: cannot find function `sleep` in this scope
   --> src/multitenancy/container.rs:958:9
    |
958 |         sleep(Duration::from_millis(200)).await;
    |         ^^^^^ not found in this scope
    |
    = note: function `crate::autonomous::self_healing::tests::sleep` exists but is inaccessible
help: consider importing one of these functions
    |
922 +     use std::thread::sleep;
    |
922 +     use libc::sleep;
    |
922 +     use tokio::time::sleep;
    |

error[E0425]: cannot find function `sleep` in this scope
   --> src/multitenancy/provisioning.rs:829:9
    |
829 |         sleep(Duration::from_secs(2)).await;
    |         ^^^^^ not found in this scope
    |
    = note: function `crate::autonomous::self_healing::tests::sleep` exists but is inaccessible
help: consider importing one of these functions
    |
786 +     use std::thread::sleep;
    |
786 +     use libc::sleep;
    |
786 +     use tokio::time::sleep;
    |

error[E0425]: cannot find function `sleep` in this scope
   --> src/multitenant/relocation.rs:625:9
    |
625 |         sleep(Duration::from_secs(1)).await;
    |         ^^^^^ not found in this scope
    |
    = note: function `crate::autonomous::self_healing::tests::sleep` exists but is inaccessible
help: consider importing one of these functions
    |
612 +     use std::thread::sleep;
    |
612 +     use libc::sleep;
    |
612 +     use tokio::time::sleep;
    |

error[E0425]: cannot find function `sleep` in this scope
   --> src/orchestration/circuit_breaker.rs:582:9
    |
582 |         sleep(Duration::from_millis(150)).await;
    |         ^^^^^ not found in this scope
    |
    = note: function `crate::autonomous::self_healing::tests::sleep` exists but is inaccessible
help: consider importing one of these functions
    |
510 +     use std::thread::sleep;
    |
510 +     use libc::sleep;
    |
510 +     use tokio::time::sleep;
    |

error[E0425]: cannot find function `fromsecs` in crate `check`
   --> src/orchestration/health.rs:659:49
    |
659 |         let checker = HealthChecker::new(check::fromsecs(1), Default::default());
    |                                                 ^^^^^^^^ not found in `check`

error[E0433]: failed to resolve: use of undeclared type `LedgerRow`
   --> src/blockchain/verification.rs:783:19
    |
783 |         let row = LedgerRow::new(
    |                   ^^^^^^^^^ use of undeclared type `LedgerRow`
    |
help: consider importing this struct through its public re-export
    |
775 +     use crate::blockchain::LedgerRow;
    |

error[E0412]: cannot find type `HashSet` in this scope
   --> src/simd/hash.rs:410:52
    |
410 |         let unique_count = hashes.iter().collect::<HashSet<_>>().len();
    |                                                    ^^^^^^^ not found in this scope
    |
    = note: struct `crate::pool::session::state::tests::HashSet` exists but is inaccessible
help: consider importing this struct
    |
348 +     use std::collections::HashSet;
    |

error[E0412]: cannot find type `HashSet` in this scope
   --> src/simd/hash.rs:451:46
    |
451 |         let unique = hashes.iter().collect::<HashSet<_>>();
    |                                              ^^^^^^^ not found in this scope
    |
    = note: struct `crate::pool::session::state::tests::HashSet` exists but is inaccessible
help: consider importing this struct
    |
348 +     use std::collections::HashSet;
    |

error[E0433]: failed to resolve: use of undeclared type `AlertSeverity`
   --> src/api/monitoring/dashboard_api.rs:358:13
    |
358 |             AlertSeverity::Warning,
    |             ^^^^^^^^^^^^^ use of undeclared type `AlertSeverity`
    |
help: consider importing one of these enums
    |
276 +     use crate::advanced_replication::AlertSeverity;
    |
276 +     use crate::api::AlertSeverity;
    |
276 +     use crate::autonomous::AlertSeverity;
    |
276 +     use crate::event_processing::analytics::AlertSeverity;
    |
    = and 3 other candidates

warning: unused import: `std::collections::HashMap`
   --> src/index/partial.rs:589:5
    |
589 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
   --> src/index/mod.rs:363:5
    |
363 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CompressionLevel` and `Compressor`
  --> src/compression/algorithms/mod.rs:28:30
   |
28 |     use crate::compression::{Compressor, CompressionLevel};
   |                              ^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `crate::IsolationLevel`
   --> src/transaction/types.rs:501:9
    |
501 |     use crate::IsolationLevel;
    |         ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `TransactionState`
   --> src/transaction/types.rs:532:49
    |
532 | use crate::transaction::types::{IsolationLevel, TransactionState};
    |                                                 ^^^^^^^^^^^^^^^^

warning: unused import: `crate::transaction::Transaction`
   --> src/transaction/types.rs:533:13
    |
533 |         use crate::transaction::Transaction;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
   --> src/transaction/error.rs:357:5
    |
357 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/transaction/version_store.rs:334:5
    |
334 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/transaction/deadlock.rs:399:5
    |
399 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/transaction/mvcc.rs:735:5
    |
735 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/transaction/recovery.rs:746:5
    |
746 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
   --> src/execution/subquery.rs:503:5
    |
503 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::networking::protocol::handshake::HandshakeRequest`
   --> src/networking/protocol/codec.rs:259:9
    |
259 |     use crate::networking::protocol::handshake::HandshakeRequest;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::networking::types::NodeAddress`
   --> src/networking/routing/router.rs:360:9
    |
360 |     use crate::networking::types::NodeAddress;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
    --> src/security/memory_hardening.rs:1093:5
     |
1093 | use std::time::UNIX_EPOCH;
     |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::thread::sleep`
    --> src/security/circuit_breaker.rs:1459:9
     |
1459 |     use std::thread::sleep;
     |         ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/backup/manager.rs:698:5
    |
698 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/backup/snapshots.rs:602:9
    |
602 |     use std::time::UNIX_EPOCH;
    |         ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
   --> src/backup/mod.rs:290:5
    |
290 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::flashback::system_time_to_timestamp`
   --> src/analytics/manager.rs:478:9
    |
478 |     use crate::flashback::system_time_to_timestamp;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/analytics/query_rewriter.rs:560:5
    |
560 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/analytics/query_rewriter.rs:561:5
    |
561 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/analytics/query_rewriter.rs:562:5
    |
562 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/analytics/quality.rs:694:5
    |
694 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/analytics/sampling.rs:521:5
    |
521 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/analytics/query_statistics.rs:602:5
    |
602 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/analytics/compression.rs:666:5
    |
666 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/analytics/cube.rs:617:5
    |
617 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
   --> src/analytics/warehouse.rs:656:5
    |
656 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/inmemory/column_store.rs:734:5
    |
734 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/inmemory/compression.rs:781:5
    |
781 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/inmemory/join_engine.rs:532:5
    |
532 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/multitenancy/container.rs:923:5
    |
923 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/multitenancy/tenant.rs:900:5
    |
900 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/multitenant/pdb.rs:821:5
    |
821 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/multitenant/tenant.rs:729:5
    |
729 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/multitenant/shared.rs:597:5
    |
597 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
    --> src/graph/property_graph.rs:1162:5
     |
1162 | use std::time::UNIX_EPOCH;
     |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
    --> src/graph/property_graph.rs:1163:5
     |
1163 | use std::time::SystemTime;
     |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
    --> src/graph/query_engine.rs:1137:5
     |
1137 | use std::time::Instant;
     |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/advanced_replication/gds.rs:676:5
    |
676 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/advanced_replication/conflicts.rs:834:5
    |
834 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/advanced_replication/monitoring.rs:650:5
    |
650 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/clustering/failover.rs:252:5
    |
252 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/rac/mod.rs:739:5
    |
739 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
   --> src/orchestration/circuit_breaker.rs:511:5
    |
511 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/orchestration/plugin.rs:639:5
    |
639 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/event_processing/sourcing.rs:711:5
    |
711 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
    --> src/event_processing/windows.rs:1004:5
     |
1004 | use std::time::UNIX_EPOCH;
     |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/ml_engine/model_store.rs:646:5
    |
646 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/ml_engine/scoring.rs:603:5
    |
603 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Instant`
   --> src/ml_engine/automl.rs:673:5
    |
673 | use std::time::Instant;
    |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
   --> src/ml_engine/timeseries.rs:716:5
    |
716 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/autonomous/self_tuning.rs:882:5
    |
882 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
   --> src/autonomous/mod.rs:254:5
    |
254 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/autonomous/mod.rs:255:5
    |
255 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/document_store/document.rs:621:5
    |
621 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/document_store/indexing.rs:776:5
    |
776 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/document_store/changes.rs:695:5
    |
695 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/optimizer_pro/transformations.rs:759:5
    |
759 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/optimizer_pro/hints.rs:737:5
    |
737 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::VecDeque`
   --> src/resource_manager/io_scheduler.rs:793:5
    |
793 | use std::collections::VecDeque;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
   --> src/pool/session/state.rs:430:5
    |
430 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::SystemTime`
   --> src/io/file_manager.rs:740:5
    |
740 | use std::time::SystemTime;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `axum::body::Body`
   --> src/api/rest/middleware.rs:428:9
    |
428 |     use axum::body::Body;
    |         ^^^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
   --> src/api/rest/middleware.rs:429:5
    |
429 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/api/rest/middleware.rs:430:5
    |
430 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
   --> src/api/rest/middleware.rs:431:5
    |
431 | use std::collections::HashMap;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::time::UNIX_EPOCH`
   --> src/api/gateway/audit.rs:222:5
    |
222 | use std::time::UNIX_EPOCH;
    |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `IpFilterMode`
   --> src/api/gateway/audit.rs:223:41
    |
223 |     use crate::api::gateway::{IpFilter, IpFilterMode, RbacManager, Role, SlidingWindow, ThreatDetector, TokenBucket};
    |                                         ^^^^^^^^^^^^

error[E0599]: no method named `is_terminal` found for enum `network::distributed::TransactionState` in the current scope
   --> src/transaction/types.rs:512:45
    |
512 |         assert!(TransactionState::Committed.is_terminal());
    |                                             ^^^^^^^^^^^ method not found in `network::distributed::TransactionState`
    |
   ::: src/network/distributed.rs:559:1
    |
559 | pub enum TransactionState {
    | ------------------------- method `is_terminal` not found for this enum
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `is_terminal`, perhaps you need to implement one of them:
            candidate #1: `IsTerminal`
            candidate #2: `anstream::stream::IsTerminal`
            candidate #3: `is_terminal::IsTerminal`
            candidate #4: `is_terminal_polyfill::IsTerminal`

error[E0599]: no method named `is_terminal` found for enum `network::distributed::TransactionState` in the current scope
   --> src/transaction/types.rs:513:43
    |
513 |         assert!(TransactionState::Aborted.is_terminal());
    |                                           ^^^^^^^^^^^ method not found in `network::distributed::TransactionState`
    |
   ::: src/network/distributed.rs:559:1
    |
559 | pub enum TransactionState {
    | ------------------------- method `is_terminal` not found for this enum
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `is_terminal`, perhaps you need to implement one of them:
            candidate #1: `IsTerminal`
            candidate #2: `anstream::stream::IsTerminal`
            candidate #3: `is_terminal::IsTerminal`
            candidate #4: `is_terminal_polyfill::IsTerminal`

error[E0599]: no method named `is_terminal` found for enum `network::distributed::TransactionState` in the current scope
   --> src/transaction/types.rs:514:43
    |
514 |         assert!(!TransactionState::Active.is_terminal());
    |                                           ^^^^^^^^^^^ method not found in `network::distributed::TransactionState`
    |
   ::: src/network/distributed.rs:559:1
    |
559 | pub enum TransactionState {
    | ------------------------- method `is_terminal` not found for this enum
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `is_terminal`, perhaps you need to implement one of them:
            candidate #1: `IsTerminal`
            candidate #2: `anstream::stream::IsTerminal`
            candidate #3: `is_terminal::IsTerminal`
            candidate #4: `is_terminal_polyfill::IsTerminal`

error[E0308]: mismatched types
   --> src/transaction/types.rs:538:35
    |
538 |             assert_eq!(txn.state, TransactionState::Active);
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `transaction::types::TransactionState`, found `network::distributed::TransactionState`
    |
    = note: `network::distributed::TransactionState` and `transaction::types::TransactionState` have similar names, but are actually distinct types
note: `network::distributed::TransactionState` is defined in module `crate::network::distributed` of the current crate
   --> src/network/distributed.rs:559:1
    |
559 | pub enum TransactionState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
note: `transaction::types::TransactionState` is defined in module `crate::transaction::types` of the current crate
   --> src/transaction/types.rs:82:1
    |
 82 | pub enum TransactionState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0027]: pattern does not mention field `or_replace`
   --> src/parser/mod.rs:557:13
    |
557 |             SqlStatement::CreateView { name, query } => {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `or_replace`
    |
help: include the missing field in the pattern
    |
557 |             SqlStatement::CreateView { name, query, or_replace } => {
    |                                                   ++++++++++++
help: if you don't care about this missing field, you can explicitly ignore it
    |
557 |             SqlStatement::CreateView { name, query, or_replace: _ } => {
    |                                                   +++++++++++++++
help: or always ignore missing fields here
    |
557 |             SqlStatement::CreateView { name, query, .. } => {
    |                                                   ++++

error[E0063]: missing fields `distinct` and `offset` in initializer of `parser::SqlStatement`
   --> src/execution/planner.rs:222:20
    |
222 |         let stmt = SqlStatement::Select {
    |                    ^^^^^^^^^^^^^^^^^^^^ missing `distinct` and `offset`

error[E0599]: no associated item named `V1_0_0` found for struct `advanced_protocol::ProtocolVersion` in the current scope
  --> src/network/advanced_protocol/errors.rs:93:41
   |
93 |             let v1_0 = ProtocolVersion::V1_0_0;
   |                                         ^^^^^^ associated item not found in `advanced_protocol::ProtocolVersion`
   |
  ::: src/network/advanced_protocol/mod.rs:29:1
   |
29 | pub struct ProtocolVersion {
   | -------------------------- associated item `V1_0_0` not found for this struct

error[E0599]: no associated item named `V1_1_0` found for struct `advanced_protocol::ProtocolVersion` in the current scope
  --> src/network/advanced_protocol/errors.rs:94:41
   |
94 |             let v1_1 = ProtocolVersion::V1_1_0;
   |                                         ^^^^^^ associated item not found in `advanced_protocol::ProtocolVersion`
   |
  ::: src/network/advanced_protocol/mod.rs:29:1
   |
29 | pub struct ProtocolVersion {
   | -------------------------- associated item `V1_1_0` not found for this struct

error[E0599]: no associated item named `V2_0_0` found for struct `advanced_protocol::ProtocolVersion` in the current scope
  --> src/network/advanced_protocol/errors.rs:95:41
   |
95 |             let v2_0 = ProtocolVersion::V2_0_0;
   |                                         ^^^^^^ associated item not found in `advanced_protocol::ProtocolVersion`
   |
  ::: src/network/advanced_protocol/mod.rs:29:1
   |
29 | pub struct ProtocolVersion {
   | -------------------------- associated item `V2_0_0` not found for this struct

error[E0308]: mismatched types
   --> src/network/advanced_protocol/errors.rs:106:60
    |
106 |             let packet = Packet::new(&&MessageType::Query, payload);
    |                          -----------                       ^^^^^^^ expected `Vec<u8>`, found `Bytes`
    |                          |
    |                          arguments to this function are incorrect
    |
    = note: expected struct `Vec<u8>`
               found struct `bytes::Bytes`
note: associated function defined here
   --> src/network/advanced_protocol/mod.rs:67:23
    |
 67 |         pub(crate) fn new(_p0: &&MessageType, _p1: Vec<u8>) -> &'a &'a Packet {
    |                       ^^^                     ------------
help: try using a conversion method
    |
106 |             let packet = Packet::new(&&MessageType::Query, payload.to_vec());
    |                                                                   +++++++++

error[E0599]: no method named `verify_checksum` found for reference `&&Packet` in the current scope
   --> src/network/advanced_protocol/errors.rs:107:28
    |
107 |             assert!(packet.verify_checksum());
    |                            ^^^^^^^^^^^^^^^ method not found in `&&Packet`

error[E0277]: `()` is not a future
    --> src/security/circuit_breaker.rs:1503:70
     |
1503 |                 tokio::time::sleep(Duration::from_millis(100)).await.await;
     |                                                                      ^^^^^ `()` is not a future
     |
     = help: the trait `futures::Future` is not implemented for `()`
     = note: () must be a future or must implement `IntoFuture` to be awaited
     = note: required for `()` to implement `std::future::IntoFuture`
help: remove the `.await`
     |
1503 -                 tokio::time::sleep(Duration::from_millis(100)).await.await;
1503 +                 tokio::time::sleep(Duration::from_millis(100)).await;
     |

error[E0277]: `()` is not a future
    --> src/security/circuit_breaker.rs:1510:70
     |
1510 |                 tokio::time::sleep(Duration::from_millis(100)).await.await;
     |                                                                      ^^^^^ `()` is not a future
     |
     = help: the trait `futures::Future` is not implemented for `()`
     = note: () must be a future or must implement `IntoFuture` to be awaited
     = note: required for `()` to implement `std::future::IntoFuture`
help: remove the `.await`
     |
1510 -                 tokio::time::sleep(Duration::from_millis(100)).await.await;
1510 +                 tokio::time::sleep(Duration::from_millis(100)).await;
     |

error[E0277]: `()` is not a future
    --> src/security/circuit_breaker.rs:1516:61
     |
1516 |         tokio::time::sleep(Duration::from_millis(10)).await.await;
     |                                                             ^^^^^ `()` is not a future
     |
     = help: the trait `futures::Future` is not implemented for `()`
     = note: () must be a future or must implement `IntoFuture` to be awaited
     = note: required for `()` to implement `std::future::IntoFuture`
help: remove the `.await`
     |
1516 -         tokio::time::sleep(Duration::from_millis(10)).await.await;
1516 +         tokio::time::sleep(Duration::from_millis(10)).await;
     |

error[E0063]: missing field `num_values` in initializer of `analytics::statistics::ColumnStatistics`
   --> src/analytics/statistics.rs:485:21
    |
485 |         let stats = ColumnStatistics {
    |                     ^^^^^^^^^^^^^^^^ missing `num_values`

error[E0560]: struct `catalog::Column` has no field named `default_value`
   --> src/analytics/view_management.rs:205:27
    |
205 |                           default_value: None,
    |                           ^^^^^^^^^^^^^ `catalog::Column` does not have this field
    |
    = note: all struct fields are already assigned

error[E0609]: no field `max_workers` on type `parallel_query::WorkerPool`
    --> src/rac/parallel_query.rs:1021:25
     |
1021 |         assert_eq!(pool.max_workers, 4);
     |                         ^^^^^^^^^^^ unknown field
     |
help: a field with a similar name exists
     |
1021 |         assert_eq!(pool._max_workers, 4);
     |                         +

error[E0308]: mismatched types
    --> src/performance/mod.rs:1813:25
     |
1813 |             created_at: (),
     |                         ^^ expected `SystemTime`, found `()`

error[E0308]: mismatched types
    --> src/performance/mod.rs:1802:54
     |
1802 |           governor.create_group("default".to_string(), ResourceGroup {
     |  __________________------------________________________^
     | |                  |
     | |                  arguments to this method are incorrect
1803 | |             name: "".to_string(),
1804 | |             priority: 0,
1805 | |             limits: Default::default(),
...    |
1813 | |             created_at: (),
1814 | |         }).unwrap();
     | |_________^ expected `performance::ResourceGroup`, found `ResourceGroup`
     |
     = note: `ResourceGroup` and `performance::ResourceGroup` have similar names, but are actually distinct types
note: `ResourceGroup` is defined in module `crate::monitoring::resource_manager` of the current crate
    --> src/monitoring/resource_manager.rs:102:1
     |
 102 | pub struct ResourceGroup {
     | ^^^^^^^^^^^^^^^^^^^^^^^^
note: `performance::ResourceGroup` is defined in module `crate::performance` of the current crate
    --> src/performance/mod.rs:1633:1
     |
1633 | pub struct ResourceGroup {
     | ^^^^^^^^^^^^^^^^^^^^^^^^
note: method defined here
    --> src/performance/mod.rs:1596:12
     |
1596 |     pub fn create_group(&self, name: String, limits: ResourceGroup) -> Result<()> {
     |            ^^^^^^^^^^^^                      ---------------------

error[E0277]: `()` is not a future
   --> src/orchestration/actor.rs:690:42
    |
690 |         sleep(Duration::from_millis(50)).await;
    |         -------------------------------- ^^^^^ `()` is not a future
    |         |
    |         this call returns `()`
    |
    = help: the trait `futures::Future` is not implemented for `()`
    = note: () must be a future or must implement `IntoFuture` to be awaited
    = note: required for `()` to implement `std::future::IntoFuture`
help: remove the `.await`
    |
690 -         sleep(Duration::from_millis(50)).await;
690 +         sleep(Duration::from_millis(50));
    |

error[E0277]: `()` is not a future
   --> src/orchestration/actor.rs:732:42
    |
732 |         sleep(Duration::from_millis(50)).await;
    |         -------------------------------- ^^^^^ `()` is not a future
    |         |
    |         this call returns `()`
    |
    = help: the trait `futures::Future` is not implemented for `()`
    = note: () must be a future or must implement `IntoFuture` to be awaited
    = note: required for `()` to implement `std::future::IntoFuture`
help: remove the `.await`
    |
732 -         sleep(Duration::from_millis(50)).await;
732 +         sleep(Duration::from_millis(50));
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `check1`
   --> src/orchestration/health.rs:678:52
    |
678 |         let checker1 = Arc::new(HealthChecker::new(check1::from_secs(1), Default::default()));
    |                                                    ^^^^^^ use of unresolved module or unlinked crate `check1`
    |
help: there is a crate or module with a similar name
    |
678 -         let checker1 = Arc::new(HealthChecker::new(check1::from_secs(1), Default::default()));
678 +         let checker1 = Arc::new(HealthChecker::new(check::from_secs(1), Default::default()));
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `check2`
   --> src/orchestration/health.rs:679:52
    |
679 |         let checker2 = Arc::new(HealthChecker::new(check2::from_secs(1), Default::default()));
    |                                                    ^^^^^^ use of unresolved module or unlinked crate `check2`
    |
help: there is a crate or module with a similar name
    |
679 -         let checker2 = Arc::new(HealthChecker::new(check2::from_secs(1), Default::default()));
679 +         let checker2 = Arc::new(HealthChecker::new(check::from_secs(1), Default::default()));
    |

